update README.md and publish 2025-2-3 post

--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: "极鹭 | Geek-Egret 致力于做开创性产品"
-header-img: "img/tag-bg.jpg"
+header-img: "img/tag-header.jpg"
 ---
 
 <!-- Page Header -->
