--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "极鹭 | Geek-Egret 致力于做开创性产品"
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/about-header.jpg"
 ---
 
 <!-- Language Selector -->
