fix some small error

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ description: "极鹭 | Geek-Egret 致力于做开创性产品"
             {{ post.subtitle }}
         </h3>
         {% endif %}
-        {% if post.subtitle %}
+        {% if post.preview-img %}
         <img class="post-preview-img"
-            src="{{ post.preview-img }}" alt="{{ post.title }} Header Image"
+            src="{{ post.preview-img }}" alt="{{ post.title }} Preview Image"
         />
         {% endif %}
         <div class="post-content-preview">
