--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/about-header.jpg"
     <!--copied from markdown -->
     <blockquote><p>🐧要做一辈子嵌入式开发!!!!!🐧</p></blockquote>
 
-    <p><strong>极鹭(Geek-Egret)</strong></p>
+    <p><strong>极鹭 | Geek-Egret</strong></p>
     <p>一个坐落于 <b>鹭岛🪽</b> 的个人工作室💕</p>
     <p>这是我们的产品博客🥰</p>
 
